--- a/groth1.tex
+++ b/groth1.tex
@@ -255,13 +255,9 @@ a new light on the involution constructed in Section \ref{sect.proof}
 properties with the classical Bender-Knuth involutions).
 
 \begin{todo}
-What is missing from the above introduction? Specifically:
-
 \begin{itemize}
-\item Are there any more results from the paper that should be advertised here?
-
-\item More reasons why care about dual stable Grothendieck polynomials? (Buch,
-Knutson, Postnikov could know some.)
+\item More reasons why the reader should
+care about dual stable Grothendieck polynomials?
 
 \item What I wrote about $K$-theory is rather shallow. More details?
 
