--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -10119,7 +10119,7 @@ $$\supp(3)=[3,4],\ \supp(2)=[4,7],\ \supp(4)=[1,4],$$
 $$\nuxy{2}{7}=(3,3),\ \nuxy{2}{8}=(3,3,2),\ \nuxy{4}{8}=(2),\ \nuxycap{4}{5}=(4,3,3,2),\ \#\nuxy{2}{7}=2.$$
 
 \begin{remark}
- If $\seplistvar$ is an admissible partition then the partitions $\nuab$ and $\nuabcap$ are clearly admissible as well. 
+ If $\seplistvar$ is not admissible, that is, if $\supp(i_k)=\emptyset$ for some $k$, then $i_k$ belongs to $\nuab$ for any $a,b$, so $\nuab$ might no longer be a contiguous subpartition of $\seplistvar$. On the other hand, if $\seplistvar$ is an admissible partition, then the partitions $\nuab$ and $\nuabcap$ are clearly admissible as well. For the rest of this section, we will only work with admissible partitions.
 \end{remark}
 
 
