Minor expository improvements

--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -233,7 +233,7 @@ are (in a sense) ``the only reasonable choice''.
 The present paper is organized as follows: In Section \ref{sect.notations}, we
 recall classical definitions and introduce notations pertaining to
 combinatorics and symmetric functions. In Section \ref{sect.def}, we define
-the dual stable Grothendieck polynomials $\widetilde{g}_{\lambda/\mu}$, state
+the refined dual stable Grothendieck polynomials $\widetilde{g}_{\lambda/\mu}$, state
 our main result (that they are symmetric functions), and do the first steps of
 its proof (by reducing it to a purely combinatorial statement about the
 existence of an involution with certain properties). In Section
@@ -273,7 +273,8 @@ characters\textquotedblright, the other one is still there).
 \subsection{Acknowledgments}
 
 We owe our familiarity with dual stable Grothendieck polynomials to Richard
-Stanley. We thank Alexander Postnikov for providing context and motivation.
+Stanley. We thank Alexander Postnikov for providing context and motivation,
+and Thomas Lam and Pavlo Pylyavskyy for interesting conversations.
 
 \begin{todo}
 Keep this up to date.
@@ -338,7 +339,8 @@ $\left\{  \left(  1,1\right)  ,\left(  1,2\right)  ,\left(  1,3\right)
 \ydiagram{0+4,0+2,0+1}%
 %EndExpansion
 $. We refer to elements of $\mathbb{N}_{+}^{2}$ as \textit{cells} (since we
-draw them as boxes in the plane).
+draw them as boxes in the plane). (Our convention for drawing Young diagrams
+is identical with that in \cite{Fulton97} and in \cite{GriRei15}.)
 
 If $\mu$ and $\lambda$ are two partitions, then we say that $\mu
 \subseteq\lambda$ if and only if every $i\in\mathbb{N}_{+}$ satisfies $\mu
